# Network-Diagnose-Tool

./: .coverage  AI Operating System.docx  COMPLETION_SUMMARY.md  DEVELOPER_GUIDE.md  HANDOFF.md  IMPLEMENTATION_REPORT.md  README.md  ROLE.docx  pyproject.toml
Prompt/: AI Operating System.md  Master Prompt.md
config/: platform.json
docs/: Architecture.md  Competitor Analysis.md  Gap Analysis.md  Implementation Plan.md  Market Analysis.md  Product Requirements Document.md  Project Charter.md  Research Report.md  Toolkit Handbook.md  Vision Document.md
scripts/: Start-Tool.ps1  build_package.py
src/NetworkDiagnosticPlatform/: __init__.py  cli.py  configuration.py  evidence_collector.py  portable.py  reporting.py  rule_engine.py
src/NetworkDiagnosticPlatform/knowledge/: __init__.py
src/network_diagnostic_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_reports/: diagnostic_report_test-pc_20260705_152422.html  diagnostic_report_test-pc_20260705_152422.json  diagnostic_report_test-pc_20260705_152422.txt
tests/NetworkDiagnosticPlatform.Tests/: test_build_script.py  test_cli.py  test_configuration.py  test_evidence_collector.py  test_knowledge_base.py  test_portable.py  test_reporting.py  test_reporting_extended.py  test_rule_engine.py  test_rule_engine_extended.py
