[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "network-diagnostic-platform"
version = "0.1.0"
description = "Offline enterprise Windows endpoint diagnostic platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
network-diagnostic = "NetworkDiagnosticPlatform.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=NetworkDiagnosticPlatform --cov-report=html --cov-report=term"

